fixed text spacing

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 	background: #a07cfc;
 	padding: 1px 0px 5px;
 
-	flex-direction: row;
+	flex-direction: column;
   flex-wrap: wrap;
   flex-flow: row wrap;
 
@@ -70,7 +70,7 @@ body {
 }
 
 .card {
-  width: 38%;
+  width: 45%;
   height: auto;
   text-align: center;
   margin-top: 1vw;
@@ -94,6 +94,9 @@ body {
   width: 50%;
   background-image: url('images/paper-bg.jpg');
   opacity: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   border-radius: 5px;
   font-family: 'EB Garamond', serif;
@@ -101,9 +104,9 @@ body {
 
 .message  {
 	margin: 1.5vw 2.5vw;
-  font-size: 20px;
+  font-size: 120%;
   font-weight: 500;
-  line-height: 140%;
+  line-height: 130%;
 }
 
 .message p:hover {
@@ -113,6 +116,19 @@ body {
 
 .message a {
   color: #3e2080;
+}
+
+@media (max-width: 1400px) {
+  .card-container {
+    width: 40%;
+  }
+  .message-container {
+    width: 55%;
+    font-size: 90%;
+  }
+  .message {
+    margin: 0vw 2.5vw;
+  }
 }
 
 @media (max-width: 1100px) {
